removied justify content and text align  hero is no longer center

--- a/src/styles/hero.css
+++ b/src/styles/hero.css
@@ -5,10 +5,8 @@
     min-height:100vh;
 
     display:flex;
-    justify-content:center;
-    align-items:center;
 
-    text-align:center;
+    align-items:center;
 
     overflow:hidden;
 
@@ -24,7 +22,7 @@
 
   }
 
-  
+
   .hero-content{
 
     position:relative;
